<package format="2">
  <name>ll2_global_planner</name>
  <version>0.0.1</version>
  <description>Localization module based on GPS-INS data</description>
  <author email="ian.colwell@hexagon.com">Ian Colwell</author>
  <maintainer email="ian.colwell@hexagon.com">Ian Colwell</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>geographiclib</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslint</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
